[package]
name = "transaction-processor"
version = "0.1.0"
authors = ["Cem Eliguzel <cemeliguzel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features = ["derive"] }
csv = "1.1.6"
linked-hash-map = "0.5.4"